--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -174,6 +174,7 @@
   /* Landing page */
   
   header {
+    /*
     background-image: linear-gradient(
         #000,
         #222,
@@ -182,6 +183,7 @@
         #000
       ),
       url("https://samiralibabic.github.io/portfolio/img/pexels-photo-min.jpg");
+    */
     background-size: cover;
     background-position: center;
     height: 100vh;
