--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -174,7 +174,7 @@
   /* Landing page */
   
   header {
-    /*
+    
     background-image: linear-gradient(
         #000,
         #222,
@@ -182,8 +182,11 @@
         #222,
         #000
       ),
-      url("https://samiralibabic.github.io/portfolio/img/pexels-photo-min.jpg");
-    */
+      /*
+      url("")
+      */
+      ;
+    
     background-size: cover;
     background-position: center;
     height: 100vh;
